--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -341,12 +341,28 @@ article.blog p, article.projects p  {
   line-height: 33px;
 }
 
+article.projects p {
+  margin-bottom: 40px;
+}
+
 h4.date {
   font-size: 15px;
 }
 
 article.blog, article.projects {
   width: 610px;
+}
+
+
+
+div.post-content a.button-src {
+  display: block;
+  width: 150px;
+  height: 50px;
+  background-color: #2D46B9;
+  color: white;
+  text-align: center;
+  line-height: 50px;
 }
 
 .column {
